--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My Git Project</title>
 </head>
 <body>
     <h1>Hello, Git! I am Groot</h1>
+    <h2>Hello, Git and Groot, I am Kevin</h2>
 </body>
 </html>
